# rlhf-clinical-redteaming

./: .env.example  .gitignore  README.md  ppo_training.ipynb  ppo_training_v2.ipynb  pyproject.toml  redteam.ipynb  requirements.txt
configs/: baseline.yaml  dpo.yaml  ppo.yaml
notebooks/: run_cli.ipynb
results/: ppo_dev_eval_metrics.json  ppo_summary.csv  ppo_training_log.jsonl  ppo_trajectories.jsonl
src/: __init__.py  __main__.py  cli.py  config.py  dpo.py  env_capture.py  eval.py  gcs.py  judge.py  judge_hf.py  logprobs.py  lora_setup.py  models.py  preference.py  results.py  rollouts.py  seeds.py  setup_seed.py
src/methods/: baseline.py  dpo.py  ppo.py
